--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Pet Info
-author=microtavor5
+author="micro tavor"
 support=https://github.com/microtavor5/PetInfoPlugin/issues
 description=Displays information about pets
 tags=pet,pets
