--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Pet Info
 author=micro tavor
 support=https://github.com/microtavor5/PetInfoPlugin/issues
-description=Displays information about pets
+description=Adds right click menu options to pets to provide info about how they are obtained and who their owner is
 tags=pet,pets
 plugins=com.micro.petinfo.PetInfoPlugin
