Change r-click menu color options for a pet's owner

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Pet Info
-author=micro tavor
+author=micro tea
 support=https://github.com/microtavor5/PetInfoPlugin/issues
 description=Adds right click menu options to pets to provide info about how they are obtained and who their owner is
 tags=pet,pets
